# webtrap

./: AUTHORS  ChangeLog  README.md  requirements.txt  setup.cfg  setup.py  webtrap.py
webtrap/: __init__.py  webtrap.py
