[metadata]
name = webtrap
summary = show http request. for debugging unknown web client
description = show http request. for debugging unknown web client
description-file = README.md
description-content-type = text/markdown
charset = UTF-8
author = thuhak
author-email = thuhak.zhou@nio.com
home-page = https://github.com/thuhak/webtrap
url = https://github.com/thuhak/webtrap
version = 1.0.0
keywords = 'debugtool'
install_requires = ['tornado>=5.1.1']

[files]
packages =
    webtrap

[entry_points]
console_scripts =
    webtrap = webtrap.webtrap:main

[wheel]
universal = 1

[pbr]
warnerrors = true
